<?xml version="1.0" encoding="utf-8"?><menu xmlns:android="http://schemas.android.com/apk/res/android">    <item            android:id="@+id/navigation_about"            android:icon="@drawable/ic_about"            android:title="@string/title_about" />    <item            android:id="@+id/navigation_location"            android:icon="@drawable/ic_map"            android:title="@string/title_location" />    <item            android:id="@+id/navigation_chat"            android:icon="@drawable/ic_chat"            android:title="@string/title_chat" />    <item            android:id="@+id/navigation_person"            android:icon="@drawable/ic_person"            android:title="@string/title_person" />    <item            android:id="@+id/navigation_exit"            android:icon="@drawable/ic_exit"            android:title="@string/title_logoff" /></menu>