<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".activity.SignUpActivity"
              android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/space20">
            <TextView
                    android:id="@+id/tv_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_message_header"
                    android:layout_centerHorizontal="true" style="@style/h2"
                    android:textAppearance="@style/Light"/>
            <TextView
                    android:id="@+id/tv_country"
                    android:layout_below="@id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_arrow_right"
                    android:text="Brasil (+55)"
                    android:layout_marginTop="@dimen/space20"
                    style="@style/EditText"
                    android:textAppearance="@style/ExtraLight"/>
            <EditText
                    android:id="@+id/et_fullname"
                    android:layout_below="@id/tv_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_fullname"
                    android:inputType="text"
                    style="@style/EditText"
                    android:focusable="true"
                    android:textAppearance="@style/ExtraLight"/>
            <EditText
                    android:id="@+id/et_email"
                    android:layout_below="@id/et_fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_email"
                    style="@style/EditText"
                    android:focusable="true"
                    android:textAppearance="@style/ExtraLight"
                    android:inputType="textEmailAddress"/>
            <EditText
                    android:id="@+id/et_password"
                    android:layout_below="@id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_password"
                    style="@style/EditText"
                    android:focusable="true"
                    android:textAppearance="@style/ExtraLight" android:inputType="textPassword"/>
            <EditText
                    android:id="@+id/et_phone"
                    android:layout_below="@id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sign_phone"
                    android:inputType="phone" style="@style/EditText"
                    android:maxLength="11"
                    android:focusable="true"
                    android:textAppearance="@style/ExtraLight"/>
            <TextView
                    android:layout_below="@id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_message_footer"
                    android:gravity="center_horizontal"
                    android:paddingLeft="@dimen/spaceLR"
                    android:paddingRight="@dimen/spaceLR"
                    android:paddingTop="@dimen/space20"
                    android:paddingBottom="@dimen/space20"
                    style="@style/h3Info"
                    android:background="@drawable/bg_top_grey"
                    android:textAppearance="@style/ExtraLight"/>
            <Button
                    android:id="@+id/bt_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:text="@string/sign_bt_continue"
                    style="@style/ButtonPink"
                    android:textAppearance="@style/ExtraLight"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>
