<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:id="@+id/root"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:orientation="vertical"
                                             android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/space20">
        <TextView
                android:id="@+id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/ic_arrow_right"
                android:text="Brasil (+55)"
                android:layout_marginTop="75dp"
                style="@style/EditText"/>
        <EditText
                android:id="@+id/et_fullname"
                android:layout_below="@id/tv_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_fullname"
                android:inputType="text"
                style="@style/EditText"
                android:focusable="true"/>
        <TextView
                android:id="@+id/tv_email"
                android:layout_below="@id/et_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_email" style="@style/EditText"
                android:textColor="@color/colorAccent"/>

        <EditText
                android:id="@+id/et_phone"
                android:layout_below="@id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sign_phone"
                android:inputType="phone" style="@style/EditText"
                android:focusable="true"
                android:maxLength="11"/>

        <TextView
                android:layout_below="@id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil_message_footer"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/spaceLR"
                android:paddingRight="@dimen/spaceLR"
                android:paddingTop="@dimen/space20"
                android:paddingBottom="@dimen/space20"
                style="@style/h3Info"
                android:background="@drawable/bg_top_grey"/>
        <Button
                android:id="@+id/bt_continue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/sign_bt_continue" style="@style/ButtonPink"
                android:layout_marginBottom="57dp"/>
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
