<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/bg_gradient"
              tools:context=".activity.SignUpActivity"
              android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:elevation="0dp">
        <include android:id="@+id/toolbar" layout="@layout/toolbar"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="@dimen/space20">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/logo"
                    android:foregroundGravity="fill_horizontal"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/space20"
                    android:id="@+id/logo"/>
            <TextView
                    android:id="@+id/tv_info"
                    android:layout_below="@id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_name_app"
                    android:layout_centerHorizontal="true" style="@style/h2"
                    android:textAppearance="@style/Light"/>
            <TextView
                    android:id="@+id/tv_name_dev"
                    android:layout_below="@id/tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_name_dev"
                    android:background="@drawable/bg_gradient"
                    android:layout_marginTop="@dimen/space20"
                    style="@style/EditText"
                    android:textAppearance="@style/ExtraLight"/>
            <TextView
                    android:layout_below="@id/tv_name_dev"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about_version"
                    android:background="@drawable/bg_gradient"
                    android:layout_marginTop="@dimen/space20" style="@style/EditText"
                    android:textAppearance="@style/ExtraLight"/>


        </RelativeLayout>
    </ScrollView>

</LinearLayout>
